Instances load and distance matrices are calculated accordingly

--- a/TSP_Matheuristics_Entrega.ipynb
+++ b/TSP_Matheuristics_Entrega.ipynb
@@ -53,54 +53,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "381efaf2",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "381efaf2",
-    "outputId": "65c103ee-44f1-4e03-f2e6-c3cb851b01f1"
-   },
+   "execution_count": 19,
+   "id": "f8da4c67",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Loading instances:\n",
-      "Loaded instance 1\n",
-      "Loaded instance 2\n",
-      "Loaded instance 3\n",
-      "Loaded instance 4\n",
-      "Loaded instance 5\n",
+      "Loaded instance 1: Instance48\n",
+      "Loaded instance 2: Instance29\n",
+      "Loaded instance 3: Instance52\n",
+      "Loaded instance 4: Instance127\n",
+      "Loaded instance 5: Instance150\n",
+      "Loaded instance 6: Instance42\n",
+      "Loaded instance 7: Instance101\n",
+      "Loaded instance 8: Instance124\n",
+      "Loaded instance 9: Instance136\n",
+      "Loaded instance 10: Instance144\n",
+      "Loaded instance 11: Instance152\n",
+      "Loaded instance 12: Instance76\n",
+      "Loaded instance 13: Instance195\n",
+      "Loaded instance 14: Instance159\n",
+      "Loaded instance 15: Instance16\n",
+      "Loaded instance 16: Instance22\n",
+      "Loaded instance 17: Instance120\n",
+      "Loaded instance 18: Instance137\n",
+      "Loaded instance 19: Instance202\n",
+      "Loaded instance 20: Instance96\n",
+      "Loaded instance 21: Instance100\n",
+      "Loaded instance 21: Instance150\n",
+      "Loaded instance 22: Instance200\n",
+      "Loaded instance 22: Instance100\n",
       "\n",
-      "Successfully loaded 5 instances.\n",
+      "Successfully loaded 22 instances.\n",
       "\n",
       "The following instances were created:\n",
-      "Instance29\n",
       "Instance48\n",
+      "Instance29\n",
       "Instance52\n",
+      "Instance127\n",
+      "Instance150\n",
+      "Instance42\n",
+      "Instance101\n",
+      "Instance124\n",
+      "Instance136\n",
+      "Instance144\n",
+      "Instance152\n",
+      "Instance76\n",
+      "Instance195\n",
+      "Instance159\n",
+      "Instance16\n",
+      "Instance22\n",
+      "Instance120\n",
+      "Instance137\n",
+      "Instance202\n",
+      "Instance96\n",
       "Instance100\n",
-      "Instance130\n"
+      "Instance200\n"
      ]
     }
    ],
    "source": [
     "# Define a list of URLs to fetch data from\n",
     "urls = [\n",
-    "    # Initial instances - Old links\n",
-    "    # 'https://raw.githubusercontent.com/guilhermecadori/TSPData/main/bays29.tsp',\n",
-    "    # 'https://raw.githubusercontent.com/guilhermecadori/TSPData/main/att48.tsp',\n",
-    "    # 'https://raw.githubusercontent.com/guilhermecadori/TSPData/main/berlin52.tsp',\n",
-    "    # 'https://raw.githubusercontent.com/guilhermecadori/TSPData/main/kroA100.tsp',\n",
-    "    # 'https://raw.githubusercontent.com/guilhermecadori/TSPData/main/ch130.tsp'\n",
-    "\n",
-    "    # Initial and new instances\n",
+    "    # Initial and new instances - Batch 1\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/att48.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/bays29.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/berlin52.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/bier127.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/ch150.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/dantzig42_4.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/eil101.tsp',\n",
     "    \n",
+    "    # Initial and new instances - Batch 2\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/pr124.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/pr136.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/pr144.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/pr152.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/pr76.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/rat195.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/u159.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/ulysses16.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/ulysses22.tsp',\n",
+    "\n",
+    "    # Initial and new instances - Batch 3\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/gr120.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/gr137.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/gr202.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/gr96.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/kroA100.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/kroA150.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/kroB200.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/kroC100.tsp'\n",
     "]\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "# Create an empty dictionary to store datasets\n",
     "datasets = {}\n",
@@ -109,63 +156,66 @@
     "\n",
     "# Loop through the URLs and fetch data for each one\n",
     "for url in urls:\n",
-    "    # Send a GET request to the URL\n",
-    "    response = requests.get(url)\n",
+    "    try:\n",
+    "        response = requests.get(url)\n",
+    "        response.raise_for_status()  # Raise an exception for HTTP errors\n",
     "\n",
-    "    # Check if the request was successful (status code 200)\n",
-    "    if response.status_code == 200:\n",
     "        data = response.text\n",
-    "\n",
-    "        # Split the data into lines\n",
     "        lines = data.split('\\n')\n",
     "\n",
-    "        # Get the dimension from the 4th row (assuming it follows the format \"DIMENSION: <value>\")\n",
-    "        dimension_line = lines[3].strip()\n",
-    "        dimension = int(dimension_line.split(\":\")[1].strip())\n",
-    "\n",
-    "        # Initialize an empty list to store the data\n",
-    "        data_list = []\n",
-    "\n",
-    "        # Start reading data from the 7th line until \"EOF\" is encountered\n",
-    "        for line in lines[6:]:\n",
-    "            if line.strip() == 'EOF':\n",
+    "        # Extract the dimension\n",
+    "        dimension = None\n",
+    "        for line in lines:\n",
+    "            if line.startswith(\"DIMENSION:\"):\n",
+    "                dimension = int(line.split(\":\")[1].strip())\n",
     "                break\n",
-    "            else:\n",
-    "                columns = line.split()\n",
+    "\n",
+    "        if dimension is None:\n",
+    "            print(f\"Dimension not found in {url}. Skipping...\")\n",
+    "            continue\n",
+    "\n",
+    "        # Extract node coordinates\n",
+    "        start_index = None\n",
+    "        for i, line in enumerate(lines):\n",
+    "            if line.strip() == \"NODE_COORD_SECTION\":\n",
+    "                start_index = i + 1\n",
+    "                break\n",
+    "\n",
+    "        if start_index is None:\n",
+    "            print(f\"Node coordinates not found in {url}. Skipping...\")\n",
+    "            continue\n",
+    "\n",
+    "        # Read node data\n",
+    "        data_list = []\n",
+    "        for line in lines[start_index:]:\n",
+    "            if line.strip() == \"EOF\":\n",
+    "                break\n",
+    "            columns = line.split()\n",
+    "            if len(columns) == 3:  # Ensure valid node data\n",
     "                data_list.append(columns)\n",
     "\n",
-    "        # Create a Pandas DataFrame from the data list\n",
-    "        df = pd.DataFrame(data_list, columns=['nodeID', 'coord1', 'coord3'])\n",
-    "        df = df.astype({'nodeID': 'float64', 'coord1': 'float64', 'coord3': 'float64'})\n",
+    "        # Create a DataFrame\n",
+    "        df = pd.DataFrame(data_list, columns=['nodeID', 'coord1', 'coord2'])\n",
+    "        df = df.astype({'nodeID': 'float64', 'coord1': 'float64', 'coord2': 'float64'})\n",
     "\n",
-    "        # Create a dataset name that includes the dimension\n",
+    "        # Store the dataset\n",
     "        dataset_name = f'Instance{dimension}'\n",
-    "\n",
-    "        # Store the dataset in the dictionary with the name as the key\n",
     "        datasets[dataset_name] = df\n",
+    "        print(f'Loaded instance {len(datasets)}: {dataset_name}')\n",
     "\n",
-    "        loadedInstanceCount = len(datasets.keys())\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error loading {url}: {e}\")\n",
     "\n",
-    "        print(f'Loaded instance {loadedInstanceCount}')\n",
-    "\n",
-    "    else:\n",
-    "        print(f'Failed to retrieve data from {url}. Status code: {response.status_code}')\n",
-    "\n",
-    "# Counting the all the loaded instances\n",
-    "totalInstanceCount = len(datasets.keys())\n",
-    "\n",
-    "print(f'\\nSuccessfully loaded {totalInstanceCount} instances.')\n",
-    "\n",
-    "# Checking created datasets\n",
-    "print('\\nThe following instances were created:')\n",
-    "\n",
+    "# Summary\n",
+    "print(f\"\\nSuccessfully loaded {len(datasets)} instances.\\n\")\n",
+    "print(\"The following instances were created:\")\n",
     "for dataset in datasets.keys():\n",
     "    print(dataset)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "5f028bb8",
    "metadata": {
     "colab": {
@@ -179,16 +229,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Calculations completed. Check if all expected matrices were produced\n",
-      "\n",
+      "Calculations completed. \n",
+      "Distance matrices created: 22\n",
       "\n",
       "The following distance matrices were created:\n",
-      "Instance29\n",
       "Instance48\n",
+      "Instance29\n",
       "Instance52\n",
+      "Instance127\n",
+      "Instance150\n",
+      "Instance42\n",
+      "Instance101\n",
+      "Instance124\n",
+      "Instance136\n",
+      "Instance144\n",
+      "Instance152\n",
+      "Instance76\n",
+      "Instance195\n",
+      "Instance159\n",
+      "Instance16\n",
+      "Instance22\n",
+      "Instance120\n",
+      "Instance137\n",
+      "Instance202\n",
+      "Instance96\n",
       "Instance100\n",
-      "Instance130\n"
+      "Instance200\n"
      ]
     }
    ],
@@ -199,7 +265,7 @@
     "for dataset_name, dataset_df in datasets.items():\n",
     "    distance_matrices[dataset_name] = scipy.spatial.distance.cdist(dataset_df, dataset_df)\n",
     "\n",
-    "print('\\nCalculations completed. Check if all expected matrices were produced\\n')\n",
+    "print(f'Calculations completed. \\nDistance matrices created: {len(distance_matrices)}')\n",
     "\n",
     "# Now, 'distance_matrices' contains the distance matrices for each dataset\n",
     "# Checking matrices' names\n",
