Updated data prep portion

--- a/TSP_Matheuristics_Entrega.ipynb
+++ b/TSP_Matheuristics_Entrega.ipynb
@@ -277,96 +277,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "eb407b38",
-   "metadata": {
-    "id": "eb407b38"
-   },
+   "execution_count": 24,
+   "id": "5d10b646",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#### Instância 1\n",
-    "# Creating pair-wise distance dictionaries\n",
-    "# Number of nodes (assuming it's a square matrix)\n",
-    "num_nodes1 = len(distance_matrices['Instance29'])\n",
+    "# Initialize a dictionary to store pairwise distances for all instances\n",
+    "pairwise_distances_all = {}\n",
     "\n",
-    "# Initialize an empty dictionary to store the pair-wise distances\n",
-    "pairwise_distances1 = {}\n",
-    "\n",
-    "# Iterate through each node\n",
-    "for i in range(num_nodes1):\n",
-    "    for j in range(num_nodes1):\n",
-    "        # Skip calculating distance between the same node\n",
-    "        if i == j:\n",
-    "            continue\n",
-    "        # Create a key for the pair (i, j) and store the distance\n",
-    "        pairwise_distances1[(i, j)] = distance_matrices['Instance29'][i, j]\n",
-    "\n",
-    "# Now, pairwise_distances will contain the distances between each pair of nodes\n",
-    "# pairwise_distances1\n",
-    "\n",
-    "\n",
-    "#### Instância 2\n",
-    "num_nodes2 = len(distance_matrices['Instance48'])\n",
-    "\n",
-    "# Initialize an empty dictionary to store the pair-wise distances\n",
-    "pairwise_distances2 = {}\n",
-    "\n",
-    "# Iterate through each node\n",
-    "for i in range(num_nodes2):\n",
-    "    for j in range(num_nodes2):\n",
-    "        # Skip calculating distance between the same node\n",
-    "        if i == j:\n",
-    "            continue\n",
-    "        # Create a key for the pair (i, j) and store the distance\n",
-    "        pairwise_distances2[(i, j)] = distance_matrices['Instance48'][i, j]\n",
-    "\n",
-    "\n",
-    "#### Instância 3\n",
-    "num_nodes3 = len(distance_matrices['Instance52'])\n",
-    "\n",
-    "# Initialize an empty dictionary to store the pair-wise distances\n",
-    "pairwise_distances3 = {}\n",
-    "\n",
-    "# Iterate through each node\n",
-    "for i in range(num_nodes3):\n",
-    "    for j in range(num_nodes3):\n",
-    "        # Skip calculating distance between the same node\n",
-    "        if i == j:\n",
-    "            continue\n",
-    "        # Create a key for the pair (i, j) and store the distance\n",
-    "        pairwise_distances3[(i, j)] = distance_matrices['Instance52'][i, j]\n",
-    "\n",
-    "\n",
-    "#### Instância 4\n",
-    "num_nodes4 = len(distance_matrices['Instance100'])\n",
-    "\n",
-    "# Initialize an empty dictionary to store the pair-wise distances\n",
-    "pairwise_distances4 = {}\n",
-    "\n",
-    "# Iterate through each node\n",
-    "for i in range(num_nodes4):\n",
-    "    for j in range(num_nodes4):\n",
-    "        # Skip calculating distance between the same node\n",
-    "        if i == j:\n",
-    "            continue\n",
-    "        # Create a key for the pair (i, j) and store the distance\n",
-    "        pairwise_distances4[(i, j)] = distance_matrices['Instance100'][i, j]\n",
-    "\n",
-    "\n",
-    "#### Instância 5\n",
-    "num_nodes5 = len(distance_matrices['Instance130'])\n",
-    "\n",
-    "# Initialize an empty dictionary to store the pair-wise distances\n",
-    "pairwise_distances5 = {}\n",
-    "\n",
-    "# Iterate through each node\n",
-    "for i in range(num_nodes5):\n",
-    "    for j in range(num_nodes5):\n",
-    "        # Skip calculating distance between the same node\n",
-    "        if i == j:\n",
-    "            continue\n",
-    "        # Create a key for the pair (i, j) and store the distance\n",
-    "        pairwise_distances5[(i, j)] = distance_matrices['Instance130'][i, j]\n"
+    "# Iterate over each instance in distance_matrices\n",
+    "for instance_name, matrix in distance_matrices.items():\n",
+    "    # Get the number of nodes (assuming square matrix)\n",
+    "    num_nodes = len(matrix)\n",
+    "    \n",
+    "    # Initialize a dictionary to store pairwise distances for the current instance\n",
+    "    pairwise_distances = {}\n",
+    "    \n",
+    "    # Iterate through each pair of nodes\n",
+    "    for i in range(num_nodes):\n",
+    "        for j in range(num_nodes):\n",
+    "            # Skip calculating distance between the same node\n",
+    "            if i == j:\n",
+    "                continue\n",
+    "            # Create a key for the pair (i, j) and store the distance\n",
+    "            pairwise_distances[(i, j)] = matrix[i, j]\n",
+    "    \n",
+    "    # Store the pairwise distances for the current instance\n",
+    "    pairwise_distances_all[instance_name] = pairwise_distances\n"
    ]
   },
   {
@@ -382,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "8qPjid34ZD6M",
    "metadata": {
     "hidden": true,
@@ -399,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "-2UbTcSy64of",
    "metadata": {
     "hidden": true,
@@ -446,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "UI2758NSZnsB",
    "metadata": {
     "hidden": true,
@@ -477,6 +414,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "74691556",
+   "metadata": {},
+   "source": [
+    "#### Code below solves instances"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1knbmbpBElfQ",
@@ -493,11 +438,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Instance29 - Starting Solution: 22741.77 | Final Solution: 10877.69 | Elapsed Time: 0.03\n",
-      "Instance48 - Starting Solution: 162121.67 | Final Solution: 42608.25 | Elapsed Time: 0.09\n",
-      "Instance52 - Starting Solution: 29138.6 | Final Solution: 9945.52 | Elapsed Time: 0.14\n",
-      "Instance100 - Starting Solution: 179500.45 | Final Solution: 42786.04 | Elapsed Time: 0.52\n",
-      "Instance130 - Starting Solution: 49541.99 | Final Solution: 12686.44 | Elapsed Time: 2.82\n"
+      "Instance48 - Starting Solution: 155414.01 | Final Solution: 38302.49 | Elapsed Time: 1.69\n",
+      "Instance29 - Starting Solution: 25540.3 | Final Solution: 9873.83 | Elapsed Time: 0.34\n",
+      "Instance52 - Starting Solution: 30367.59 | Final Solution: 9314.85 | Elapsed Time: 2.61\n",
+      "Instance127 - Starting Solution: 617234.54 | Final Solution: 159524.23 | Elapsed Time: 45.09\n",
+      "Instance150 - Starting Solution: 249141.47 | Final Solution: 47942.53 | Elapsed Time: 72.11\n",
+      "Instance42 - Starting Solution: 3009.47 | Final Solution: 847.21 | Elapsed Time: 1.25\n",
+      "Instance101 - Starting Solution: 5487.64 | Final Solution: 1665.08 | Elapsed Time: 16.27\n",
+      "Instance124 - Starting Solution: 662709.39 | Final Solution: 110513.35 | Elapsed Time: 46.54\n"
      ]
     }
    ],
@@ -536,7 +484,7 @@
    "outputs": [],
    "source": [
     "count_arcs_instances = {}\n",
-    "# Itera as Instâncias\n",
+    "# Itera sobre as instâncias\n",
     "for idx, instance in enumerate(datasets.keys()):\n",
     "    max_reps = {}\n",
     "    solutions = np.array(instance_tours[idx])\n",
@@ -544,7 +492,7 @@
     "    arcs = []\n",
     "    count_arcs = {}\n",
     "    for solution in solutions:\n",
-    "        # Itera os Nós da Solução\n",
+    "        # Itera sobre os nós da solução\n",
     "        for idx, node in enumerate(solution):\n",
     "            arcs.append((solution[idx], solution[(idx + 1) % len(solution)]))\n",
     "    for arc in arcs:\n",
