Added time limit to the heuristic

--- a/TSP_Matheuristics_Entrega.ipynb
+++ b/TSP_Matheuristics_Entrega.ipynb
@@ -7,13 +7,11 @@
     "id": "1fd06caf"
    },
    "source": [
-    "## Combinatorial Optimization\n",
+    "### Solving The Symmetric Traveling Salesman Problem - TSP: Herustic, Exact and IRSS Hybrid\n",
     "\n",
-    "### Solving The Symmetric Traveling Salesman Problem - TSP\n",
+    "**Authors:** Guilherme C. Cadori\n",
     "\n",
-    "**Authors:** Guilherme C. Cadori; Rafael A. de Oliveira\n",
-    "\n",
-    "**Date:** 27/09/2023"
+    "**Date:** 26/11/2024"
    ]
   },
   {
@@ -28,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "bd42090c",
    "metadata": {
     "id": "bd42090c"
@@ -53,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "id": "f8da4c67",
    "metadata": {},
    "outputs": [
@@ -62,56 +60,56 @@
      "output_type": "stream",
      "text": [
       "Loading instances:\n",
-      "Loaded instance 1: Instance48\n",
-      "Loaded instance 2: Instance29\n",
-      "Loaded instance 3: Instance52\n",
-      "Loaded instance 4: Instance127\n",
-      "Loaded instance 5: Instance150\n",
-      "Loaded instance 6: Instance42\n",
-      "Loaded instance 7: Instance101\n",
-      "Loaded instance 8: Instance124\n",
-      "Loaded instance 9: Instance136\n",
-      "Loaded instance 10: Instance144\n",
-      "Loaded instance 11: Instance152\n",
-      "Loaded instance 12: Instance76\n",
-      "Loaded instance 13: Instance195\n",
-      "Loaded instance 14: Instance159\n",
-      "Loaded instance 15: Instance16\n",
-      "Loaded instance 16: Instance22\n",
-      "Loaded instance 17: Instance120\n",
-      "Loaded instance 18: Instance137\n",
-      "Loaded instance 19: Instance202\n",
-      "Loaded instance 20: Instance96\n",
-      "Loaded instance 21: Instance100\n",
-      "Loaded instance 21: Instance150\n",
-      "Loaded instance 22: Instance200\n",
-      "Loaded instance 22: Instance100\n",
+      "Loaded instance 1: Instance16\n",
+      "Loaded instance 2: Instance22\n",
+      "Loaded instance 3: Instance29\n",
+      "Loaded instance 4: Instance42\n",
+      "Loaded instance 5: Instance48\n",
+      "Loaded instance 6: Instance52\n",
+      "Loaded instance 7: Instance76\n",
+      "Loaded instance 8: Instance96\n",
+      "Loaded instance 9: Instance100\n",
+      "Loaded instance 9: Instance100\n",
+      "Loaded instance 10: Instance101\n",
+      "Loaded instance 11: Instance120\n",
+      "Loaded instance 12: Instance124\n",
+      "Loaded instance 13: Instance127\n",
+      "Loaded instance 14: Instance136\n",
+      "Loaded instance 15: Instance137\n",
+      "Loaded instance 16: Instance144\n",
+      "Loaded instance 17: Instance150\n",
+      "Loaded instance 17: Instance150\n",
+      "Loaded instance 18: Instance152\n",
+      "Loaded instance 19: Instance159\n",
+      "Loaded instance 20: Instance195\n",
+      "Loaded instance 21: Instance200\n",
+      "Loaded instance 22: Instance202\n",
       "\n",
       "Successfully loaded 22 instances.\n",
       "\n",
       "The following instances were created:\n",
-      "Instance48\n",
-      "Instance29\n",
-      "Instance52\n",
-      "Instance127\n",
-      "Instance150\n",
-      "Instance42\n",
-      "Instance101\n",
-      "Instance124\n",
-      "Instance136\n",
-      "Instance144\n",
-      "Instance152\n",
-      "Instance76\n",
-      "Instance195\n",
-      "Instance159\n",
       "Instance16\n",
       "Instance22\n",
-      "Instance120\n",
-      "Instance137\n",
-      "Instance202\n",
+      "Instance29\n",
+      "Instance42\n",
+      "Instance48\n",
+      "Instance52\n",
+      "Instance76\n",
       "Instance96\n",
       "Instance100\n",
-      "Instance200\n"
+      "Instance101\n",
+      "Instance120\n",
+      "Instance124\n",
+      "Instance127\n",
+      "Instance136\n",
+      "Instance137\n",
+      "Instance144\n",
+      "Instance150\n",
+      "Instance152\n",
+      "Instance159\n",
+      "Instance195\n",
+      "Instance200\n",
+      "Instance202\n"
      ]
     }
    ],
@@ -119,34 +117,35 @@
     "# Define a list of URLs to fetch data from\n",
     "urls = [\n",
     "    # Initial and new instances - Batch 1\n",
-    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/att48.tsp',\n",
-    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/bays29.tsp',\n",
-    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/berlin52.tsp',\n",
-    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/bier127.tsp',\n",
-    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/ch150.tsp',\n",
-    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/dantzig42_4.tsp',\n",
-    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/eil101.tsp',\n",
-    "    \n",
-    "    # Initial and new instances - Batch 2\n",
-    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/pr124.tsp',\n",
-    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/pr136.tsp',\n",
-    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/pr144.tsp',\n",
-    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/pr152.tsp',\n",
-    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/pr76.tsp',\n",
-    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/rat195.tsp',\n",
-    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/u159.tsp',\n",
     "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/ulysses16.tsp',\n",
-    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/ulysses22.tsp',\n",
-    "\n",
-    "    # Initial and new instances - Batch 3\n",
-    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/gr120.tsp',\n",
-    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/gr137.tsp',\n",
-    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/gr202.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/ulysses22.tsp',    \n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/bays29.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/dantzig42_4.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/att48.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/berlin52.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/pr76.tsp',\n",
     "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/gr96.tsp',\n",
     "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/kroA100.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/kroC100.tsp',\n",
+    "    \n",
+    "    # Initial and new instances - Batch 2\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/eil101.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/gr120.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/pr124.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/bier127.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/pr136.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/gr137.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/pr144.tsp',\n",
     "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/kroA150.tsp',\n",
+    "    \n",
+    "    # Initial and new instances - Batch 3\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/ch150.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/pr152.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/u159.tsp',\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/rat195.tsp',\n",
     "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/kroB200.tsp',\n",
-    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/kroC100.tsp'\n",
+    "    'https://raw.githubusercontent.com/guilhermecadori/TSPData/refs/heads/main/gr202.tsp'\n",
+    "\n",
     "]\n",
     "\n",
     "# Create an empty dictionary to store datasets\n",
@@ -215,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "id": "5f028bb8",
    "metadata": {
     "colab": {
@@ -233,28 +232,28 @@
       "Distance matrices created: 22\n",
       "\n",
       "The following distance matrices were created:\n",
-      "Instance48\n",
-      "Instance29\n",
-      "Instance52\n",
-      "Instance127\n",
-      "Instance150\n",
-      "Instance42\n",
-      "Instance101\n",
-      "Instance124\n",
-      "Instance136\n",
-      "Instance144\n",
-      "Instance152\n",
-      "Instance76\n",
-      "Instance195\n",
-      "Instance159\n",
       "Instance16\n",
       "Instance22\n",
-      "Instance120\n",
-      "Instance137\n",
-      "Instance202\n",
+      "Instance29\n",
+      "Instance42\n",
+      "Instance48\n",
+      "Instance52\n",
+      "Instance76\n",
       "Instance96\n",
       "Instance100\n",
-      "Instance200\n"
+      "Instance101\n",
+      "Instance120\n",
+      "Instance124\n",
+      "Instance127\n",
+      "Instance136\n",
+      "Instance137\n",
+      "Instance144\n",
+      "Instance150\n",
+      "Instance152\n",
+      "Instance159\n",
+      "Instance195\n",
+      "Instance200\n",
+      "Instance202\n"
      ]
     }
    ],
@@ -277,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "id": "5d10b646",
    "metadata": {},
    "outputs": [],
@@ -319,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "id": "8qPjid34ZD6M",
    "metadata": {
     "hidden": true,
@@ -336,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "id": "-2UbTcSy64of",
    "metadata": {
     "hidden": true,
@@ -383,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "UI2758NSZnsB",
    "metadata": {
     "hidden": true,
@@ -391,8 +390,39 @@
    },
    "outputs": [],
    "source": [
+    "# def lin_kernighan(instance, distance_matrices, tour):\n",
+    "#     initial_time = time.time()\n",
+    "#     n = len(tour)\n",
+    "#     improvement = True\n",
+    "\n",
+    "#     while improvement:\n",
+    "#         improvement = False\n",
+    "\n",
+    "#         for i, j in itertools.combinations(range(n), 2):\n",
+    "#             delta_length = calculate_edge_changes(instance, distance_matrices, tour, i, j)\n",
+    "\n",
+    "#             if delta_length < 0:\n",
+    "#                 tour[i], tour[j] = tour[j], tour[i]\n",
+    "#                 improvement = True\n",
+    "#                 break\n",
+    "\n",
+    "#     final_time = time.time()\n",
+    "#     elapsed_time = final_time - initial_time\n",
+    "\n",
+    "#     return tour, elapsed_time\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "40120eef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Alternative with time limit\n",
     "def lin_kernighan(instance, distance_matrices, tour):\n",
     "    initial_time = time.time()\n",
+    "    time_limit = 900  # 15 minutes in seconds\n",
     "    n = len(tour)\n",
     "    improvement = True\n",
     "\n",
@@ -400,6 +430,11 @@
     "        improvement = False\n",
     "\n",
     "        for i, j in itertools.combinations(range(n), 2):\n",
+    "            # Check if the time limit has been exceeded\n",
+    "            if time.time() - initial_time > time_limit:\n",
+    "                print(\"Time limit reached. Returning the best found solution.\")\n",
+    "                return tour, time.time() - initial_time\n",
+    "\n",
     "            delta_length = calculate_edge_changes(instance, distance_matrices, tour, i, j)\n",
     "\n",
     "            if delta_length < 0:\n",
@@ -418,7 +453,7 @@
    "id": "74691556",
    "metadata": {},
    "source": [
-    "#### Code below solves instances"
+    "***Code below solves instances***"
    ]
   },
   {
@@ -438,14 +473,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Instance48 - Starting Solution: 155414.01 | Final Solution: 38302.49 | Elapsed Time: 1.69\n",
-      "Instance29 - Starting Solution: 25540.3 | Final Solution: 9873.83 | Elapsed Time: 0.34\n",
-      "Instance52 - Starting Solution: 30367.59 | Final Solution: 9314.85 | Elapsed Time: 2.61\n",
-      "Instance127 - Starting Solution: 617234.54 | Final Solution: 159524.23 | Elapsed Time: 45.09\n",
-      "Instance150 - Starting Solution: 249141.47 | Final Solution: 47942.53 | Elapsed Time: 72.11\n",
-      "Instance42 - Starting Solution: 3009.47 | Final Solution: 847.21 | Elapsed Time: 1.25\n",
-      "Instance101 - Starting Solution: 5487.64 | Final Solution: 1665.08 | Elapsed Time: 16.27\n",
-      "Instance124 - Starting Solution: 662709.39 | Final Solution: 110513.35 | Elapsed Time: 46.54\n"
+      "Instance16 - Starting Solution: 192.0 | Final Solution: 92.83 | Elapsed Time: 0.08\n",
+      "Instance22 - Starting Solution: 292.39 | Final Solution: 119.65 | Elapsed Time: 0.15\n",
+      "Instance29 - Starting Solution: 24751.27 | Final Solution: 9742.77 | Elapsed Time: 0.35\n",
+      "Instance42 - Starting Solution: 2964.47 | Final Solution: 877.35 | Elapsed Time: 1.22\n",
+      "Instance48 - Starting Solution: 163566.01 | Final Solution: 38685.89 | Elapsed Time: 1.93\n",
+      "Instance52 - Starting Solution: 30661.33 | Final Solution: 8795.75 | Elapsed Time: 2.45\n",
+      "Instance76 - Starting Solution: 551993.88 | Final Solution: 137807.94 | Elapsed Time: 9.0\n",
+      "Instance96 - Starting Solution: 4675.99 | Final Solution: 942.05 | Elapsed Time: 17.44\n",
+      "Instance100 - Starting Solution: 157987.57 | Final Solution: 32882.25 | Elapsed Time: 20.49\n",
+      "Instance101 - Starting Solution: 5040.58 | Final Solution: 1590.25 | Elapsed Time: 15.87\n"
      ]
     }
    ],
