Partial results for heuristic approach

--- a/TSP_Matheuristics_Entrega.ipynb
+++ b/TSP_Matheuristics_Entrega.ipynb
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "1knbmbpBElfQ",
    "metadata": {
     "colab": {
@@ -482,7 +482,25 @@
       "Instance76 - Starting Solution: 551993.88 | Final Solution: 137807.94 | Elapsed Time: 9.0\n",
       "Instance96 - Starting Solution: 4675.99 | Final Solution: 942.05 | Elapsed Time: 17.44\n",
       "Instance100 - Starting Solution: 157987.57 | Final Solution: 32882.25 | Elapsed Time: 20.49\n",
-      "Instance101 - Starting Solution: 5040.58 | Final Solution: 1590.25 | Elapsed Time: 15.87\n"
+      "Instance101 - Starting Solution: 5040.58 | Final Solution: 1590.25 | Elapsed Time: 15.87\n",
+      "Instance120 - Starting Solution: 11975.41 | Final Solution: 3825.18 | Elapsed Time: 26.31\n",
+      "Instance124 - Starting Solution: 668004.38 | Final Solution: 110325.32 | Elapsed Time: 49.1\n",
+      "Instance127 - Starting Solution: 616114.58 | Final Solution: 159442.17 | Elapsed Time: 67.83\n",
+      "Instance136 - Starting Solution: 860446.34 | Final Solution: 148897.06 | Elapsed Time: 64.86\n",
+      "Instance137 - Starting Solution: 9268.06 | Final Solution: 1609.49 | Elapsed Time: 54.52\n",
+      "Time limit reached. Returning the best found solution.\n",
+      "Instance144 - Starting Solution: 868044.38 | Final Solution: 157616.32 | Elapsed Time: 962.49\n",
+      "Instance150 - Starting Solution: 54887.41 | Final Solution: 13488.86 | Elapsed Time: 62.65\n",
+      "Instance152 - Starting Solution: 1071483.01 | Final Solution: 191548.76 | Elapsed Time: 69.7\n",
+      "Time limit reached. Returning the best found solution.\n",
+      "Time limit reached. Returning the best found solution.\n",
+      "Time limit reached. Returning the best found solution.\n",
+      "Time limit reached. Returning the best found solution.\n",
+      "Time limit reached. Returning the best found solution.\n",
+      "Instance159 - Starting Solution: 441984.81 | Final Solution: 78757.15 | Elapsed Time: 4571.3\n",
+      "Instance195 - Starting Solution: 25340.97 | Final Solution: 4301.65 | Elapsed Time: 161.77\n",
+      "Instance200 - Starting Solution: 320634.41 | Final Solution: 56499.12 | Elapsed Time: 167.85\n",
+      "Instance202 - Starting Solution: 14058.12 | Final Solution: 1556.71 | Elapsed Time: 226.73\n"
      ]
     }
    ],
@@ -513,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "t-tR5i-Gnu-4",
    "metadata": {
     "id": "t-tR5i-Gnu-4"
